Header section done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
 <!-- box icon  -->
-<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <style>
     .font-manrope {
@@ -23,12 +23,47 @@
 
 
 <body class="font-manrope">
-    <header>
+
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- header section  -->
+        <header class="flex p-10 mb-20">
+            <!-- text content -->
+             <div class="space-y-4">
+                <h1 class="text-5xl md:text-7xl font-extrabold">It's good <br>
+                    tea time at The Tea House</h1>
 
 
-    </header>
+                   <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p> 
 
-    <main>
+                   <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] font-bold text-white py-3 px-5 rounded-lg">Explore More <i class='bx bx-right-arrow-alt -rotate-45 text-xl'></i><button>
+             </div>
+             <div class="relative">
+                  <!-- image content  -->
+                <div >
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+
+                <!-- card -->
+                <div class=" absolute flex justify-center items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28 ">
+                    <!-- icon  -->
+
+                    <div>
+                        <i class='text-amber-500 text-2xl bx bxs-star'></i>
+                    </div>
+                    <!-- text  -->
+                     <div class="ml-2">
+                        <h2 class=" ;g:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                     </div>
+                </div>
+
+
+              </div>
+
+        </header>
+
+
+
 
     </main>
 
